--- a/.github/workflows/Mod.yml
+++ b/.github/workflows/Mod.yml
@@ -16,6 +16,10 @@ on:
         description: 'Enter "username/repo branch" to fetch & merge, or 0 for none'
         required: false
         default: '0'
+      merge_dns:
+        description: 'merge DNS commit (0 = none)'
+        required: false
+        default: '0'
         
  
 jobs:
@@ -91,6 +95,21 @@ jobs:
         git config user.name "github-actions[bot]"
         git config user.email "github-actions[bot]@users.noreply.github.com"
 
+        if [ "${{ github.event.inputs.merge_dns }}" != "0" ]; then
+         DNS_MSG="refactor(dns): streamline query handling and remove redundant deadline logic"
+
+         git remote add j2rong4cn https://github.com/j2rong4cn/Xray-core.git
+         git fetch j2rong4cn main
+
+         DNS_HOST_SHA=$(git log j2rong4cn/main --grep="$DNS_MSG" --format="%H" -n 1)
+
+         if [ -n "$DNS_HOST_SHA" ]; then
+          echo "Found commit: $DNS_HOST_SHA"
+          git cherry-pick "$DNS_HOST_SHA" || true
+          else
+          echo "$DNS_MSG"
+         fi
+        fi
        
         
         COUNT=${{ github.event.inputs.pr_count }}
