--- a/.github/workflows/Mod.yml
+++ b/.github/workflows/Mod.yml
@@ -158,7 +158,7 @@ jobs:
 
         echo "Updating go.mod to use local xray-core..."
         go mod edit -replace=github.com/xtls/xray-core="$XRAY_PATH"
-        go mod edit -replace=gvisor.dev/gvisor=gvisor.dev/gvisor@v0.0.0-20260109181451-4be7c433dae2
+        #go mod edit -replace=gvisor.dev/gvisor=gvisor.dev/gvisor@v0.0.0-20260109181451-4be7c433dae2
 
         #go mod edit -replace=gvisor.dev/gvisor=gvisor.dev/gvisor@v0.0.0-20250606001031-fa4c4dd86b43
           
