--- a/.github/workflows/modlib.yaml
+++ b/.github/workflows/modlib.yaml
@@ -66,7 +66,12 @@ jobs:
     - name: Install gomobile
       run: |
         go install golang.org/x/mobile/cmd/gomobile@latest
-        
+        echo "$HOME/go/bin" >> $GITHUB_PATH
+
+    - name: Verify 
+      run: |
+         which go
+         which gomobile
         
     - name: Setup Android SDK
       uses: android-actions/setup-android@v3.2.0
