--- a/.github/workflows/modlib.yaml
+++ b/.github/workflows/modlib.yaml
@@ -31,11 +31,13 @@ jobs:
       uses: actions/checkout@v6.0.0
       
     - uses: actions/cache@v4
+      id: go-cache
       with:
        path: .go
        key: patched-go-${{ hashFiles('go.mod') }}
 
     - name: Install patched Go
+      if: steps.go-cache.outputs.cache-hit != 'true'
       shell: bash
       run: |
         set -e
@@ -62,7 +64,11 @@ jobs:
         
 
         echo "$(pwd)/.go/bin" >> $GITHUB_PATH
-
+    - name: Activate patched Go
+      shell: bash
+      run: |
+       echo "$(pwd)/.go/bin" >> $GITHUB_PATH
+       go version
     - name: Install gomobile
       run: |
         go install golang.org/x/mobile/cmd/gomobile@latest
