--- a/.github/workflows/Modlibpie.yml
+++ b/.github/workflows/Modlibpie.yml
@@ -177,23 +177,23 @@ jobs:
           case $arch in
             arm64)
               export GOARCH=arm64
-              export CC=$NDK/bin/aarch64-linux-android21-clang
-              export CXX=$NDK/bin/aarch64-linux-android21-clang++
+              export CC=aarch64-linux-android21-clang
+              export CXX=aarch64-linux-android21-clang++
               export CGO_CFLAGS="-target aarch64-linux-android21"
               OUT=out/arm64-v8a/libxivpn.so
               ;;
             armv7a)
               export GOARCH=arm
               export GOARM=7
-              export CC=$NDK/bin/armv7a-linux-androideabi21-clang
-              export CXX=$NDK/bin/armv7a-linux-androideabi21-clang++
+              export CC=aarch64-linux-android21-clang
+              export CXX=aarch64-linux-android21-clang++
               export CGO_CFLAGS="-target armv7a-linux-androideabi21"
               OUT=out/armeabi-v7a/libxivpn.so
               ;;
             x86_64)
               export GOARCH=amd64
-              export CC=$NDK/bin/x86_64-linux-android21-clang
-              export CXX=$NDK/bin/x86_64-linux-android21-clang++
+              export CC=x86_64-linux-android21-clang
+              export CXX=x86_64-linux-android21-clang++
               export CGO_CFLAGS="-target x86_64-linux-android21"
               OUT=out/x86_64/libxivpn.so
               ;;
