--- a/.github/workflows/Modlibpie.yml
+++ b/.github/workflows/Modlibpie.yml
@@ -24,19 +24,15 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-
-    # --- Checkout repo ---
     - name: Checkout repository
       uses: actions/checkout@v6.0.0
 
-    # --- Cache patched Go ---
     - uses: actions/cache@v4
       id: go-cache
       with:
-        path: .go
-        key: patched-go-${{ hashFiles('go.mod') }}
+       path: .go
+       key: patched-go-${{ hashFiles('go.mod') }}
 
-    # --- Install patched Go ---
     - name: Install patched Go
       if: steps.go-cache.outputs.cache-hit != 'true'
       shell: bash
@@ -54,8 +50,8 @@ jobs:
     - name: Activate patched Go
       shell: bash
       run: |
-        echo "$(pwd)/.go/bin" >> $GITHUB_PATH
-        go version
+       echo "$(pwd)/.go/bin" >> $GITHUB_PATH
+       go version
 
     - name: Install gomobile
       run: |
@@ -64,10 +60,10 @@ jobs:
 
     - name: Verify Go & gomobile
       run: |
-        which go
-        which gomobile
+         which go
+         go version
+         which gomobile
 
-    # --- Original Android SDK + NDK for gomobile bind ---
     - name: Setup Android SDK
       uses: android-actions/setup-android@v3.2.0
       with:
@@ -80,145 +76,75 @@ jobs:
         echo "y" | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --channel=0 --install "ndk;28.2.13676358"
         echo "ANDROID_NDK_HOME=$ANDROID_HOME/ndk/28.2.13676358" >> $GITHUB_ENV
 
-    # --- Build logic: assets, xray-core clones, PR merges, DNS patch ---
-    - name: Build preparation
+    - name: Build gomobile .aar
       run: |
         mkdir -p assets data
         bash gen_assets.sh download
         cp -v data/*.dat assets/
         go env -w GOPRIVATE=github.com/xtls/xray-core
         go env -w GONOSUMDB=github.com/xtls/xray-core
-
         MODCACHE=$(go env GOMODCACHE)
         MOD_PATH="$MODCACHE/github.com/xtls/xray-core"
         rm -rf "$MOD_PATH"
         XRAY_PATH="$GITHUB_WORKSPACE/_deps/xray-core"
         rm -rf "$XRAY_PATH"
-
         git clone https://github.com/xtls/xray-core.git "$XRAY_PATH"
         cd "$XRAY_PATH"
         git checkout main
         git fetch origin main
-
-        LOCAL_SHA=$(git rev-parse HEAD)
-        REMOTE_SHA=$(git rev-parse origin/main)
-
         git config user.name "github-actions[bot]"
         git config user.email "github-actions[bot]@users.noreply.github.com"
-
-        if [ "${{ github.event.inputs.merge_dns }}" != "0" ]; then
-          DNS_MSG="refactor(dns): streamline query handling and remove redundant deadline logic"
-          git remote add j2rong4cn https://github.com/j2rong4cn/Xray-core.git
-          git fetch j2rong4cn main
-          DNS_HOST_SHA=$(git log j2rong4cn/main --grep="$DNS_MSG" --format="%H" -n 1)
-          if [ -n "$DNS_HOST_SHA" ]; then
-            git cherry-pick "$DNS_HOST_SHA" || true
-          fi
-        fi
-
-        IFS=',' read -ra PR_LIST <<< "${{ github.event.inputs.merge_prs }}"
-        for PR_NUM in "${PR_LIST[@]}"; do
-          git fetch origin pull/$PR_NUM/head:pr-$PR_NUM
-          git merge -X theirs --no-edit pr-$PR_NUM || true
-        done
-
-        if [ "${{ github.event.inputs.fetch_branches_from_other }}" != "0" ]; then
-          IFS=',' read -ra EXT_LIST <<< "${{ github.event.inputs.fetch_branches_from_other }}"
-          for ITEM in "${EXT_LIST[@]}"; do
-            REPO=$(echo "$ITEM" | awk '{print $1}')
-            BRANCH=$(echo "$ITEM" | awk '{print $2}')
-            REMOTE_NAME="ext_$(echo "$REPO" | sed 's|/|_|g')"
-            git remote add "$REMOTE_NAME" "https://github.com/$REPO.git" || true
-            git fetch "$REMOTE_NAME" "$BRANCH"
-            git merge -X theirs --no-edit "$REMOTE_NAME/$BRANCH" || true
-          done
-        fi
-
-        cd ${{ github.workspace }}/
+        cd $GITHUB_WORKSPACE
         go mod edit -replace=github.com/xtls/xray-core="$XRAY_PATH"
         go mod tidy
         go mod download
-
-    # --- gomobile bind ---
-    - name: Build AAR with gomobile
-      run: |
         gomobile init -v
+        go mod tidy
         gomobile bind -v -androidapi 24 -trimpath -gcflags="all=-l=4" -ldflags='-s -w -buildid=' ./
 
-    # --- NDK r27 setup for manual .so ---
-    - name: Setup NDK r27 for manual .so build
+    - name: Setup NDK for custom .so
       uses: nttld/setup-ndk@v1
       id: setup-ndk
       with:
         add-to-path: false
         ndk-version: r27
+    - name: Add NDK to PATH
+      run: echo "NDK=$PWD/ndk/android-ndk-r27" >> $GITHUB_ENV
 
-    - name: Setup NDK environment for manual .so
+    - name: Build custom .so files
+      shell: bash
       run: |
-        export NDK=$(pwd)/ndk/android-ndk-r27
-        export PATH=$NDK/toolchains/llvm/prebuilt/linux-x86_64/bin:$PATH
-        echo "NDK=$NDK" >> $GITHUB_ENV
-        echo "PATH=$PATH" >> $GITHUB_ENV
-        which clang
+        wget https://raw.githubusercontent.com/Exclude0122/libxivpn/refs/heads/master/build.sh
+        chmod +x build.sh
+        ./build.sh all patch
 
-    # --- Manual .so build ---
-    - name: Build manual PIE .so
-      env:
-        NDK: ${{ env.NDK }}
+    - name: Replace .so in .aar
+      shell: bash
       run: |
-        mkdir -p out/arm64-v8a out/armeabi-v7a out/x86_64
+        mkdir -p out/arm64-v8a out/x86_64 out/armeabi-v7a
+        mv libxivpn_arm64.so out/arm64-v8a/libxivpn.so
+        mv libxivpn_x86_64.so out/x86_64/libxivpn.so
+        mv libxivpn_armv7a.so out/armeabi-v7a/libxivpn.so
 
-        export GOOS=android
-        export CGO_ENABLED=1
-        export CGO_LDFLAGS="-v -Wl,-z,max-page-size=16384"
-
-        ARCHS=("arm64" "armv7a" "x86_64")
-        for arch in "${ARCHS[@]}"; do
-          case $arch in
-            arm64)
-              export GOARCH=arm64
-              export CC=aarch64-linux-android21-clang
-              export CXX=aarch64-linux-android21-clang++
-              export CGO_CFLAGS="-target aarch64-linux-android21"
-              OUT=out/arm64-v8a/libxivpn.so
-              ;;
-            armv7a)
-              export GOARCH=arm
-              export GOARM=7
-              export CC=aarch64-linux-android21-clang
-              export CXX=aarch64-linux-android21-clang++
-              export CGO_CFLAGS="-target armv7a-linux-androideabi21"
-              OUT=out/armeabi-v7a/libxivpn.so
-              ;;
-            x86_64)
-              export GOARCH=amd64
-              export CC=x86_64-linux-android21-clang
-              export CXX=x86_64-linux-android21-clang++
-              export CGO_CFLAGS="-target x86_64-linux-android21"
-              OUT=out/x86_64/libxivpn.so
-              ;;
-          esac
-          go build -buildmode=pie -trimpath -o "$OUT" -ldflags="-s -w -buildid=" -buildvcs=false libv2ray_main.go
-        done
-
-    # --- Replace .so in AAR ---
-    - name: Replace .so in AAR
-      run: |
         AAR=$(ls *.aar)
         unzip "$AAR" -d aar_tmp
+
+        # remove original libgojni.so if present
         rm -f aar_tmp/jni/**/libgojni.so || true
+
+        # copy custom .so
         cp out/arm64-v8a/libxivpn.so  aar_tmp/jni/arm64-v8a/libgojni.so
         cp out/armeabi-v7a/libxivpn.so aar_tmp/jni/armeabi-v7a/libgojni.so
         cp out/x86_64/libxivpn.so     aar_tmp/jni/x86_64/libgojni.so
+
         cd aar_tmp
         zip -r ../"$AAR" .
         cd ..
         unzip -l "$AAR"
 
-    # --- Upload artifacts ---
     - name: Upload build artifacts
       if: github.event.inputs.release_tag == ''
-      uses: actions/upload-artifact@v6.0.0
+      uses: actions/upload-artifact@v6
       with:
         name: libv2ray
         path: |
