--- a/.github/workflows/Modlibpie.yml
+++ b/.github/workflows/Modlibpie.yml
@@ -106,19 +106,22 @@ jobs:
       uses: nttld/setup-ndk@v1
       id: setup-ndk
       with:
-        add-to-path: false
+        add-to-path: true
         ndk-version: r27
 
     - name: Build custom .so files
       shell: bash
       run: |
         # Export paths and environment
-        export NDK=$PWD/ndk/android-ndk-r27
+        echo $NDK 
         export GOOS=android
         export CGO_ENABLED=1
         export AR=$NDK/bin/llvm-ar
         export LD=$NDK/bin/ld
         export RANLIB=$NDK/bin/llvm-ranlib
+        export STRIP=$TOONDKLCHAIN/bin/llvm-strip
+        export CGO_LDFLAGS="-v -Wl,-z,max-page-size=16384"
+
 
         # Clean previous builds
         rm -f libxivpn_arm64.so libxivpn_x86_64.so libxivpn_armv7a.so
@@ -131,6 +134,7 @@ jobs:
               export GOARCH=arm64
               export CC=$NDK/bin/aarch64-linux-android21-clang
               export CXX=$NDK/bin/aarch64-linux-android21-clang++
+              export TARGET=aarch64-linux-android
               OUT=libxivpn_arm64.so
               ;;
             x86_64)
@@ -138,6 +142,7 @@ jobs:
               export GOARCH=amd64
               export CC=$NDK/bin/x86_64-linux-android21-clang
               export CXX=$NDK/bin/x86_64-linux-android21-clang++
+              export TARGET=x86_64-linux-android
               OUT=libxivpn_x86_64.so
               ;;
             armv7a)
@@ -146,6 +151,7 @@ jobs:
               export GOARM=7
               export CC=$NDK/bin/armv7a-linux-androideabi21-clang
               export CXX=$NDK/bin/armv7a-linux-androideabi21-clang++
+              export TARGET=armv7a-linux-android
               OUT=libxivpn_armv7a.so
               ;;
           esac
