--- a/.github/workflows/Modlibpie.yml
+++ b/.github/workflows/Modlibpie.yml
@@ -11,6 +11,7 @@ on:
         required: false
         default: ''
         type: string
+        
       fetch_branches_from_other:
         description: 'Enter "username/repo branch" to fetch & merge, or 0 for none'
         required: false
@@ -19,14 +20,16 @@ on:
         description: 'merge DNS commit (0 = none)'
         required: false
         default: '0'
-
+        
+ 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+
     - name: Checkout repository
       uses: actions/checkout@v6.0.0
-
+      
     - uses: actions/cache@v4
       id: go-cache
       with:
@@ -38,32 +41,44 @@ jobs:
       shell: bash
       run: |
         set -e
-        GO_VERSION=$(sed -n -E 's/^go ([0-9]+\.[0-9]+).*/\1/p' go.mod)
-        FULL_VERSION=$(curl -s https://go.dev/VERSION?m=text | grep "^go$GO_VERSION")
-        curl -L "https://go.dev/dl/${FULL_VERSION}.linux-amd64.tar.gz" -o go.tar.gz
-        tar -xzf go.tar.gz
-        mv go .go
-        curl -L https://raw.githubusercontent.com/Exclude0122/libxivpn/refs/heads/master/goruntime-boottime-over-monotonic.diff -o runtime.patch
-        patch -d .go -p1 < runtime.patch
-        echo "$(pwd)/.go/bin" >> $GITHUB_PATH
 
+        GO_VERSION=$(sed -n -E 's/^go ([0-9]+\.[0-9]+).*/\1/p' go.mod)
+
+        echo "Go version from go.mod: $GO_VERSION"
+
+        # get latest patch version dynamically
+        FULL_VERSION=$(curl -s https://go.dev/VERSION?m=text | grep "^go$GO_VERSION")
+
+        echo "Resolved full version: $FULL_VERSION"
+
+          curl -L "https://go.dev/dl/${FULL_VERSION}.linux-amd64.tar.gz" -o go.tar.gz
+          tar -xzf go.tar.gz
+          mv go .go
+
+          echo "Applying runtime patch..."
+          curl -L \
+            https://raw.githubusercontent.com/Exclude0122/libxivpn/refs/heads/master/goruntime-boottime-over-monotonic.diff \
+            -o runtime.patch
+
+          patch -d .go -p1 < runtime.patch
+        
+
+        echo "$(pwd)/.go/bin" >> $GITHUB_PATH
     - name: Activate patched Go
       shell: bash
       run: |
        echo "$(pwd)/.go/bin" >> $GITHUB_PATH
        go version
-
     - name: Install gomobile
       run: |
         go install golang.org/x/mobile/cmd/gomobile@latest
         echo "$HOME/go/bin" >> $GITHUB_PATH
 
-    - name: Verify Go & gomobile
+    - name: Verify 
       run: |
          which go
-         go version
          which gomobile
-
+        
     - name: Setup Android SDK
       uses: android-actions/setup-android@v3.2.0
       with:
@@ -71,124 +86,210 @@ jobs:
         cmdline-tools-version: '12266719'
         packages: 'platforms;android-35 build-tools;35.0.0 platform-tools'
 
-    - name: Install NDK for gomobile
+    - name: Install NDK
       run: |
-        echo "y" | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --channel=0 --install "ndk;28.2.13676358"
+        echo "y" | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager \
+          --channel=0 \
+          --install "ndk;28.2.13676358"
         echo "ANDROID_NDK_HOME=$ANDROID_HOME/ndk/28.2.13676358" >> $GITHUB_ENV
 
-    - name: Build gomobile .aar
+    - name: Build
       run: |
         mkdir -p assets data
         bash gen_assets.sh download
         cp -v data/*.dat assets/
+        echo "Preparing Go environment..."
         go env -w GOPRIVATE=github.com/xtls/xray-core
         go env -w GONOSUMDB=github.com/xtls/xray-core
+
+        echo "Finding Go module cache path..."
         MODCACHE=$(go env GOMODCACHE)
+        echo "Module cache path: $MODCACHE"
+
+        echo "Ensuring xray-core is a full git clone..."
         MOD_PATH="$MODCACHE/github.com/xtls/xray-core"
-        rm -rf "$MOD_PATH"
+        rm -rf "$MOD_PATH"  # Remove any proxy-downloaded copy
         XRAY_PATH="$GITHUB_WORKSPACE/_deps/xray-core"
         rm -rf "$XRAY_PATH"
+        
         git clone https://github.com/xtls/xray-core.git "$XRAY_PATH"
         cd "$XRAY_PATH"
         git checkout main
+
+        echo "Fetching latest refs from origin..."
         git fetch origin main
+
+        LOCAL_SHA=$(git rev-parse HEAD)
+        REMOTE_SHA=$(git rev-parse origin/main)
+
+        echo "Local HEAD:   $LOCAL_SHA"
+        echo "Origin/main: $REMOTE_SHA"
+
+        if [ "$LOCAL_SHA" = "$REMOTE_SHA" ]; then
+         echo "✅ xray-core is up to date with origin/main"
+        else
+         echo "⚠️ xray-core is NOT at latest origin/main"
+         git log --oneline --decorate --max-count=5 origin/main
+        fi
         git config user.name "github-actions[bot]"
         git config user.email "github-actions[bot]@users.noreply.github.com"
-        cd $GITHUB_WORKSPACE
+
+        if [ "${{ github.event.inputs.merge_dns }}" != "0" ]; then
+         DNS_MSG="refactor(dns): streamline query handling and remove redundant deadline logic"
+
+         git remote add j2rong4cn https://github.com/j2rong4cn/Xray-core.git
+         git fetch j2rong4cn main
+
+         DNS_HOST_SHA=$(git log j2rong4cn/main --grep="$DNS_MSG" --format="%H" -n 1)
+
+         if [ -n "$DNS_HOST_SHA" ]; then
+          echo "Found commit: $DNS_HOST_SHA"
+          git cherry-pick "$DNS_HOST_SHA" || true
+         else
+          echo "$DNS_MSG"
+         fi
+        fi
+       
+        
+        COUNT=${{ github.event.inputs.pr_count }}
+        IFS=',' read -ra PR_LIST <<< "${{ github.event.inputs.merge_prs }}"
+          for PR_NUM in "${PR_LIST[@]}"; do
+            echo "Fetching PR #$PR_NUM..."
+            git fetch origin pull/$PR_NUM/head:pr-$PR_NUM
+            echo "Merging PR #$PR_NUM (auto-resolve: theirs)..."
+            git merge -X theirs --no-edit pr-$PR_NUM || true
+            echo "Changes from PR #$PR_NUM:"
+            git log HEAD~1..HEAD --stat || true
+          done
+
+        # Merge branch from   repo if requested
+        if [ "${{ github.event.inputs.fetch_branches_from_other }}" != "0" ]; then
+         BRANCH_INPUT="${{ github.event.inputs.fetch_branches_from_other }}"
+        fi
+        if [[ "$BRANCH_INPUT" != "0" ]]; then
+        IFS=',' read -ra EXT_LIST <<< "$BRANCH_INPUT"
+         for ITEM in "${EXT_LIST[@]}"; do
+         REPO=$(echo "$ITEM" | awk '{print $1}')
+         BRANCH=$(echo "$ITEM" | awk '{print $2}')
+
+        echo "Fetching branch '$BRANCH' from repo '$REPO'..."
+
+        # Name remote based on repo to avoid collision
+        REMOTE_NAME="ext_$(echo "$REPO" | sed 's|/|_|g')"
+
+        git remote add "$REMOTE_NAME" "https://github.com/$REPO.git" || true
+        git fetch "$REMOTE_NAME" "$BRANCH"
+
+        echo "Merging $REMOTE_NAME/$BRANCH (auto-resolve theirs)..."
+        git merge -X theirs --no-edit "$REMOTE_NAME/$BRANCH" || true
+
+        git add -A
+        echo "Changes from $REMOTE_NAME/$BRANCH:"
+        git log HEAD~1..HEAD --stat || true
+
+        done
+        fi          
+        
+        
+        
+        
+        cd ${{ github.workspace }}/
+
+        echo "Updating go.mod to use local xray-core..."
         go mod edit -replace=github.com/xtls/xray-core="$XRAY_PATH"
+        #go mod edit -replace=gvisor.dev/gvisor=gvisor.dev/gvisor@v0.0.0-20260109181451-4be7c433dae2
+
+        #go mod edit -replace=gvisor.dev/gvisor=gvisor.dev/gvisor@v0.0.0-20250606001031-fa4c4dd86b43
+          
+        # Update specific dependency
+        #go get github.com/xtls/xray-core@${{ env.LATEST_TAG_SHA }}
+
+        # Update all other dependencies
+        
+        
         go mod tidy
         go mod download
+       
+
+        echo "Initializing gomobile..."
         gomobile init -v
         go mod tidy
-        gomobile bind -v -androidapi 24 -trimpath -gcflags="all=-l=4" -ldflags='-s -w -buildid=' ./
+        
+        echo "Binding for Android..."
+        # Export parallel compilation (uses all CPU cores for faster builds)
+        export GOMAXPROCS=$(nproc)
 
-    - name: Setup NDK for custom .so
-      uses: nttld/setup-ndk@v1
-      id: setup-ndk
-      with:
-        add-to-path: false
-        ndk-version: r27
+        gomobile bind \
+        -v \
+        -androidapi 24 \
+        -trimpath \
+        -gcflags="all=-l=4" \
+        -ldflags="-s -w -buildid='' -linkmode=external -extldflags '-fuse-ld=lld -Wl,--gc-sections -Wl,--build-id=none'" \
+        ./
 
-    - name: Build custom .so files
-      shell: bash
-      env:
-          NDK: ${{ steps.setup-ndk.outputs.ndk-path }}/toolchains/llvm/prebuilt/linux-x86_64
+
+    - name: Strip native libraries in AAR
       run: |
-        # Export paths and environment
-        echo $NDK 
-        export GOOS=android
-        export CGO_ENABLED=1
-        export AR=$NDK/bin/llvm-ar
-        export LD=$NDK/bin/ld
-        export RANLIB=$NDK/bin/llvm-ranlib
-        export STRIP=$TOONDKLCHAIN/bin/llvm-strip
-        export CGO_LDFLAGS="-v -Wl,-z,max-page-size=16384"
+       # Setup paths
+        AAR_FILE="libv2ray.aar"
+        EXTRACT_DIR="aar_extract"
+        NDK_STRIP="$ANDROID_NDK_HOME/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-strip"
+    
+        # Verify AAR exists
+       if [ ! -f "$AAR_FILE" ]; then
+        echo "Error: $AAR_FILE not found!"
+        exit 1
+       fi
+    
+       # Create extraction directory
+       mkdir -p "$EXTRACT_DIR"
+    
+       # Extract AAR (it's just a ZIP)
+       echo "Extracting $AAR_FILE..."
+       unzip -q "$AAR_FILE" -d "$EXTRACT_DIR"
+    
+       # Find and strip all .so files
+       echo "Stripping native libraries..."
+       find "$EXTRACT_DIR" -name "*.so" -type f | while read -r so_file; do
+       arch=$(basename "$(dirname "$so_file")")
+       echo "  Processing [$arch]: $(basename "$so_file")"
+      
+       # Get size before
+       size_before=$(stat -c%s "$so_file" 2>/dev/null || stat -f%z "$so_file" 2>/dev/null)
+      
+       # Strip: --strip-all removes all symbols (same as -s)
+       "$NDK_STRIP" --strip-all "$so_file"
+      
+       # Get size after
+       size_after=$(stat -c%s "$so_file" 2>/dev/null || stat -f%z "$so_file" 2>/dev/null)
+       saved=$((size_before - size_after))
+      
+       echo "    Saved: $saved bytes ($(numfmt --to=iec $saved 2>/dev/null || echo "$saved"))"
+       done
+    
+       # Repackage AAR with maximum compression
+       echo "Repackaging AAR..."
+       cd "$EXTRACT_DIR"
+     
+       # Create new AAR with optimized compression
+       # -X: no extra file attributes (cleaner)
+       # -9: maximum compression
+       zip -r -X -9 "../${AAR_FILE}.tmp" .
+       cd ..
+    
+       # Replace original
+       mv "${AAR_FILE}.tmp" "$AAR_FILE"
+    
+       # Cleanup
+       rm -rf "$EXTRACT_DIR"
+    
+       # Show final result
+       echo "Post-strip AAR size: $(ls -lh $AAR_FILE | awk '{print $5}')"
 
-
-        # Clean previous builds
-        rm -f libxivpn_arm64.so libxivpn_x86_64.so libxivpn_armv7a.so
-
-        # Build all architectures
-        for arch in arm64 x86_64 armv7a; do
-          case $arch in
-            arm64)
-              export CGO_CFLAGS="-target aarch64-linux-android21"
-              export GOARCH=arm64
-              export CC=$NDK/bin/aarch64-linux-android21-clang
-              export CXX=$NDK/bin/aarch64-linux-android21-clang++
-              export TARGET=aarch64-linux-android
-              OUT=libxivpn_arm64.so
-              ;;
-            x86_64)
-              export CGO_CFLAGS="-target x86_64-linux-android21"
-              export GOARCH=amd64
-              export CC=$NDK/bin/x86_64-linux-android21-clang
-              export CXX=$NDK/bin/x86_64-linux-android21-clang++
-              export TARGET=x86_64-linux-android
-              OUT=libxivpn_x86_64.so
-              ;;
-            armv7a)
-              export CGO_CFLAGS="-target armv7a-linux-androideabi21"
-              export GOARCH=arm
-              export GOARM=7
-              export CC=$NDK/bin/armv7a-linux-androideabi21-clang
-              export CXX=$NDK/bin/armv7a-linux-androideabi21-clang++
-              export TARGET=armv7a-linux-android
-              OUT=libxivpn_armv7a.so
-              ;;
-          esac
-
-          echo "Building $arch -> $OUT"
-          go build -buildmode=pie -trimpath -o $OUT -ldflags="-s -w -buildid=" -buildvcs=false ./
-        done
-
-    - name: Replace .so in .aar
-      shell: bash
-      run: |
-        mkdir -p out/arm64-v8a out/x86_64 out/armeabi-v7a
-        mv libxivpn_arm64.so out/arm64-v8a/libxivpn.so
-        mv libxivpn_x86_64.so out/x86_64/libxivpn.so
-        mv libxivpn_armv7a.so out/armeabi-v7a/libxivpn.so
-
-        AAR=$(ls *.aar)
-        unzip "$AAR" -d aar_tmp
-
-        # remove original libgojni.so if present
-        rm -f aar_tmp/jni/**/libgojni.so || true
-
-        # copy custom .so and rename
-        cp out/arm64-v8a/libxivpn.so  aar_tmp/jni/arm64-v8a/libgojni.so
-        cp out/armeabi-v7a/libxivpn.so aar_tmp/jni/armeabi-v7a/libgojni.so
-        cp out/x86_64/libxivpn.so     aar_tmp/jni/x86_64/libgojni.so
-
-        cd aar_tmp
-        zip -r ../"$AAR" .
-        cd ..
-        unzip -l "$AAR"
 
     - name: Upload build artifacts
       if: github.event.inputs.release_tag == ''
-      uses: actions/upload-artifact@v6
+      uses: actions/upload-artifact@v6.0.0
       with:
         name: libv2ray
         path: |
