--- a/.github/workflows/Modlibpie.yml
+++ b/.github/workflows/Modlibpie.yml
@@ -1,4 +1,4 @@
-name: Build mod
+name: Build mod optimise
 
 on:
   workflow_dispatch:
@@ -219,6 +219,7 @@ jobs:
         # Export parallel compilation (uses all CPU cores for faster builds)
         export GOMAXPROCS=$(nproc)
         export CGO_ENABLED=1
+        export GOEXPERIMENT="greenteagc,jsonv2,newinliner"
 
 
         # Use API 21 compiler (works on Android 5.0+)
