--- a/.github/workflows/Modpiev2.yml
+++ b/.github/workflows/Modpiev2.yml
@@ -229,16 +229,16 @@ jobs:
         export CXX="$ANDROID_NDK_HOME/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android21-clang++"
 
 
-        export CGO_CFLAGS="-O3 -flto=full -fomit-frame-pointer -fno-semantic-interposition -falign-functions=32"
-        export CGO_CXXFLAGS="-O3 -flto=full -fomit-frame-pointer -fno-semantic-interposition -falign-functions=32"
-        export CGO_LDFLAGS="-O3 -flto=full -fuse-ld=lld -Wl,-O3 -Wl,--lto-O3 -Wl,-z,max-page-size=16384"
-
+        export CGO_CFLAGS="-O2 -flto=thin -fomit-frame-pointer -fno-semantic-interposition -falign-functions=32"
+        export CGO_CXXFLAGS="-O2 -flto=thin -fomit-frame-pointer -fno-semantic-interposition -falign-functions=32"
+        export CGO_LDFLAGS="-O2 -flto=thin -fuse-ld=lld -Wl,-O2 -Wl,--lto-O2 -Wl,-z,max-page-size=16384"
+        export GOFLAGS="-a"
         gomobile bind \
         -v \
         -androidapi 24 \
         -trimpath \
-        -gcflags="all=-l=4 -c=10" \
-        -ldflags="-s -w -buildid='' -linkmode=external -extldflags '-fuse-ld=lld -flto=full -O3 -Wl,-O3 -Wl,--lto-O3 -Wl,-z,max-page-size=16384'" \
+        -gcflags="all=-l=4" \
+        -ldflags="-s -w -buildid='' -linkmode=external -extldflags '-fuse-ld=lld -flto=thin -O2 -Wl,-O2 -Wl,--lto-O2 -Wl,-z,max-page-size=16384'" \
         ./
 
     - name: Strip native libraries in AAR
