--- a/.github/workflows/Modpielibv3.yaml
+++ b/.github/workflows/Modpielibv3.yaml
@@ -66,14 +66,14 @@ jobs:
 
        # Apply patches
        echo "Applying Go patch 1230..."
-       curl -L "$GO_PATCH_1230" | patch -d .go -p1
+       curl -L "$GO_PATCH_1230" | patch -d .go -p1 --forward
 
        echo "Applying Go patch 1234..."
-       curl -L "$GO_PATCH_1234" | patch -d .go -p1
+       curl -L "$GO_PATCH_1234" | patch -d .go -p1 --forward
 
        echo "Applying runtime patch..."
        curl -L "$RUNTIME_PATCH" -o runtime.patch
-       patch -d .go -p1 < runtime.patch
+       patch -d .go -p1 --forward < runtime.patch
 
        # Rebuild Go toolchain (required for runtime patches)
        echo "Rebuilding Go toolchain..."
