--- a/.github/workflows/Modpielibv3.yaml
+++ b/.github/workflows/Modpielibv3.yaml
@@ -69,7 +69,7 @@ jobs:
        #curl -L "$GO_PATCH_1230" | patch -d .go -p1 --forward
 
        echo "Applying Go patch 1234..."
-       curl -L "$GO_PATCH_1234" | patch -d .go -p1 --forward
+       #curl -L "$GO_PATCH_1234" | patch -d .go -p1 --forward
 
        echo "Applying runtime patch..."
        curl -L "$RUNTIME_PATCH" -o runtime.patch
